# hippo-tv-layout

./: Makefile  extension-settings.conf  meson.build  metadata.json
locale/fr/LC_MESSAGES/: vertical-workspaces.mo
schemas/: gschemas.compiled  meson.build  org.gnome.shell.extensions.vertical-workspaces.gschema.xml
